[gd_scene load_steps=3 format=3 uid="uid://708xt16pddmu"]

[ext_resource type="Script" uid="uid://ctkp7nfvlauon" path="res://Scripts/Login.gd" id="1_leum0"]

[sub_resource type="LabelSettings" id="LabelSettings_nmwcj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_leum0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 188.0
offset_top = 116.0
offset_right = 401.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ingresa tu c√≥digo de acceso"

[node name="CodigoInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Usuario123"

[node name="IngresarButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ingresar"

[node name="MensajeError" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_nmwcj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="APIRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/IngresarButton" to="." method="_on_ingresar_button_pressed"]
[connection signal="request_completed" from="APIRequest" to="." method="_on_api_request_request_completed"]
